@@ -2,7 +2,12 @@
 
 language: c
 sudo: required
-dist: trusty
+dist: bionic
+
+jobs:
+  include:
+    - name: r-4.0
+      env: R_VERSION="4.0"
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
