@@ -1,3 +1,12 @@
+2020-05-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch to bionic and R 4.0.0
+
+2020-05-19  Dirk Schumacher  <mail@dirk-schumacher.net>
+
+	* src/digest.c: Support file operation
+	* inst/tinytest/test_blake3.R: Update test
+
 2020-05-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version): Roll minor version and date
